Fix user smartAnnotation overflow in commnet sidebar [SCI-7842]

--- a/app/assets/stylesheets/shared/comments_sidebar.scss
+++ b/app/assets/stylesheets/shared/comments_sidebar.scss
@@ -15,6 +15,10 @@
     width: var(--comments-sidebar-width);
   }
 
+  .atwho-user-container {
+    white-space: normal;
+  }
+
   .sidebar-content {
     background: $color-concrete;
     border-left: 1px solid $color-white;
